--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "node scripts/build.js",
     "watch": "jest --config jest.config.json --watch",
-    "test": "jest --config jest.config.test.json",
+    "test": "jest --config jest.config.json",
     "coverage": "jest --runInBand --coverage --config jest.config.json && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
